2020-08-30 databases full_catering.backup catering.backup and empty-catering.backup changed for above problems
2020-08-30 catering.py error handling viewing for empty tables improved
2020-08-30 catering.py modest calculator error handling improved
2020-08-30 Documentation_Catering_POS.pdf under Purchasing deliveries addition item_stock in table articles about increase.
2020-08-31 catering.py import by expiring products first removed barcode in table loss for foreignkey link.
2020-09-02 catering.py EAN structure for printing EAN8 and EAN13 set to official dimensions
2020-09-02 databases full_catering.backup catering.backup and empty-catering.backup added selling_price, selling_contents 
           and item_unit in tables order_lines and sales
2020-09-02 catering.py changed names item_price in selling_price and repaired bug blocking when no stock is present.
2020-09-03 catering.py barcodechecks normalised to EAN13 and EAN8
2020-09-03 Documentation changed annual_consumption and tables sceenshots sales and order_lines adjusted.
2020-09-06 catering.py purchasing solved mtoday in enclosing scope module saveHandled
2020-09-07 catering.py purchasing supplier linking released by viewing all orders and viewing to order.
2020-09-08 catering.py error purchase suppliernr repaired by selecting orders supplier.
2020-09-09 catering.py import loss changed for booking expired items on table loss category Obsolete.
2020-09-09 catering.backup, empty_catering.backup and full_catering.backup removed foreignkey link with table articles, 
           for possibility booking on table loss for deleted items.
2020-09-09 backups table loss extended with field item_price
2020-09-10 catering.py request loss and book loss articles added fields item_price and description for uncoupling foreignkey articles
2020-09-10 catering.backup and empty_catering.backup and full_catering.backup database changed due to adding fields item_price and description

