@@ -95,5 +95,6 @@
 2020-09-09 backups table loss extended with field item_price
 2020-09-10 catering.py request loss and book loss articles added fields item_price and description for uncoupling foreignkey articles
 2020-09-10 catering.backup and empty_catering.backup and full_catering.backup database changed due to adding fields item_price and description
+2020-09-10 catering.py in display heading callname employee showed for switching between employees.
 
 
